# Vanderbilt_2014

./: .clang-format  .gitignore  BUILD  LICENSE  README.md  SConscript  SConstruct  all_possible_git_commands  cldoc_generate_command.sh  darwin  dwndiff_helper  main  search.json
docs/: codon_compression.md  dardiff_alg.md  dardiff_format.md  darwin pitch.odt  readme_notes.md
mvp_testing/: #ape_1#  #file#  500_lines_of_dna.fasta  500_lines_of_dna_minus_lines.fasta  500_lines_of_dna_minus_lines.fasta.vcsfmt1  500_lines_of_dna_minus_lines.fasta.vcsfmt2  500_lines_of_dna_with_comments.fasta  WEIRD_OUTPUT_FILE.vcscmp  pVU14003.ape  pVU14004.ape  pVU14005.ape  pVU14006.ape
src/: #main.c#  BUILD  CMakeLists.txt  argparse_setup.h  block_processing.c  block_processing.h  codon_hash_count.c  codon_hash_count.h  fasta.c  fasta.h  main.c  sequence_heuristics.c  sequence_heuristics.h  sequence_processing.c  sequence_processing.h  string_processing.c  string_processing.h  utilities.c  utilities.h  vcscmp.c  vcscmp.h  vcsfmt.c  vcsfmt.h
src/gperf_hashing/: README  amino_codons  codon_hash_count.h
xml/: diff_file_trio_with_indices.xml  fasta_preformat.xml  file functions.xml  index.xml  levenshtein_string_edit_operation.xml  line_id.xml  line_id::line_id.xml  line_id_pair.xml  macros.xml  queue_processing.xml  queue_processing::boolean_and_data.xml  queue_processing::diff_file_trio_with_indices.xml  queue_processing::line_id_pair.xml  queue_processing::line_id_with_edit_match_info.xml  string_with_size.xml  string_with_size::string_with_size.xml  string_with_size_and_index.xml  (+10 more)
(+35 files in other folders)
